<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.avereon.pom</groupId>
		<artifactId>mod</artifactId>
		<version>3.2.0-SNAPSHOT</version>
	</parent>

	<groupId>com.avereon</groupId>
	<artifactId>carta</artifactId>
	<version>1.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Cartesia</name>
	<description>2D/3D computer aided design.</description>
	<inceptionYear>2020</inceptionYear>

	<repositories>
		<repository>
			<id>avn</id>
			<url>https://repo.avereon.com/avn</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>avn</id>
			<url>https://repo.avereon.com/avn</url>
		</pluginRepository>
	</pluginRepositories>

	<properties>
		<curve.version>0.2-SNAPSHOT</curve.version>
		<jep.version>2.24</jep.version>
		<zarra.version>0.5-SNAPSHOT</zarra.version>
		<images-folder>target/main/images</images-folder>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.avereon</groupId>
			<artifactId>curve</artifactId>
			<version>${curve.version}</version>
		</dependency>

		<dependency>
			<groupId>jep</groupId>
			<artifactId>jep</artifactId>
			<version>${jep.version}</version>
		</dependency>

		<dependency>
			<groupId>com.avereon</groupId>
			<artifactId>xenon</artifactId>
			<classifier>tests</classifier>
			<version>${xenon.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.avereon</groupId>
			<artifactId>zarra</artifactId>
			<version>${zarra.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>14</source>
					<target>14</target>
					<release>14</release>
				</configuration>
				<executions>
					<execution>
						<id>default-testCompile</id>
						<configuration>
							<compilerArgs>
								<!-- This whole thing is due to a split module problem -->
								<!-- Cannot find the jar because it's in the maven repo -->
								<arg>-J--patch-module com.avereon.xenon=xenon-${xenon.version}-tests.jar</arg>
							</compilerArgs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- Version comes from parent -->
				<configuration>
					<!-- The argLine and systemPropertyVariables should match the failsafe configuration below -->
					<argLine>
						--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
						--add-opens=com.avereon.cartesia/com.avereon.cartesia=ALL-UNNAMED
						--add-opens=com.avereon.cartesia/com.avereon.cartesia.command=ALL-UNNAMED
						--add-opens=com.avereon.cartesia/com.avereon.cartesia.cursor=ALL-UNNAMED
						--add-opens=com.avereon.cartesia/com.avereon.cartesia.data=ALL-UNNAMED
						--add-opens=com.avereon.cartesia/com.avereon.cartesia.icon=ALL-UNNAMED
						--add-opens=com.avereon.cartesia/com.avereon.cartesia.math=ALL-UNNAMED
						--add-opens=com.avereon.cartesia/com.avereon.cartesia.tool=ALL-UNNAMED
						--add-opens=com.avereon.cartesia/com.avereon.cartesia.tool.view=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>packs</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.avereon</groupId>
						<artifactId>cameo</artifactId>
						<executions>
							<execution>
								<id>render</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>render</goal>
								</goals>
								<configuration>
									<images>
										<image>
											<class>com.avereon.cartesia.icon.CartesiaIcon</class>
											<target>${images-folder}/product.png</target>
											<theme>light</theme>
										</image>
									</images>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
